# openmotion-tools

./: .gitignore  CLAUDE.md  LICENSE  README.md  openwater-research.md  pyproject.toml  requirements.txt
docs/: data-formats.md  science-pipeline.md  setup-and-troubleshooting.md  visualization-patterns.md
examples/: smoke_test.py
linux/: 99-openmotion.rules  install.sh
openmotion/: __init__.py  constants.py  io.py  pipeline.py  plot_interactive.py  plot_static.py  summary.py
scripts/: tui_heatmap.py
